2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* templates/GtkSharp2Project.xpt.xml: Use the new partial class model.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Echo resgen command line
	for debugging purpose.

2007-01-11  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): .resx file has paths
	relative to the .resx file itself.

2006-12-21  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use project's base
	directory as the working directory when invoking the compiler.
	(DoCompilation): Add param 'working_dir'.

2006-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBindingCompilerManager.cs: Track changes in FileService API.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Filename arg to resgen
	should be quoted.

2006-12-15  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Use resgen to convert .resx
	to embeddable resource format (.resources). Handle 'null' resourceId.

2006-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* CSharpBinding.mdp, Parser/SharpDevelopTree/CompilationUnit.cs,
	  Parser/SharpDevelopTree/Indexer.cs,
	  Parser/SharpDevelopTree/Parameter.cs,
	  Parser/SharpDevelopTree/Event.cs, Parser/SharpDevelopTree/Field.cs,
	  Parser/SharpDevelopTree/Property.cs, Makefile.am: Removed some
	  unnecessary Default* subclasses.
	* Parser/Parser.cs, Parser/CSharpVisitor.cs, Parser/Resolver.cs,
	  Parser/SharpDevelopTree/Destructor.cs,
	  Parser/SharpDevelopTree/Method.cs,
	  Parser/SharpDevelopTree/ReturnType.cs,
	  Parser/SharpDevelopTree/Class.cs,
	  Parser/SharpDevelopTree/Constructor.cs,
	  Parser/SharpDevelopTree/AttributeSection.cs: Renamed Abstract*
	  classes to Default*. Removed some unnecessary Default* subclasses.

2006-12-13  Ankit Jain  <jankit@novell.com>

	* Project/CSharpCompilerParameters.cs (Win32Resource): New.