@@ -59,7 +59,7 @@ using Gtk;
 
 public partial class MainWindow: Gtk.Window
 {	
-	public MainWindow (): base ("")
+	public MainWindow (): base (Gtk.WindowType.Toplevel)
 	{
 		Build ();
 	}
